--- a/frontend/frontend/AddUserPage.xaml
+++ b/frontend/frontend/AddUserPage.xaml
@@ -1,11 +1,13 @@
-﻿<Page x:Class="frontend.MessagePage"
+﻿<Page x:Class="frontend.AddUserPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:frontend"
       mc:Ignorable="d" 
-      d:DesignHeight="850" d:DesignWidth="1200"
-      Title="Send message" Background="WhiteSmoke">
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="AddUserPage">
+
     <Grid>
         <Grid.Resources>
             <Style TargetType="{x:Type ListBoxItem}">
@@ -33,17 +35,17 @@
             <Viewbox Stretch="Uniform" HorizontalAlignment="Left">
                 <ListBox x:Name="menuBox" HorizontalAlignment="Left" Background="Black" ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False">
                     <ListBoxItem Content="Home" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
-                    <ListBoxItem IsSelected="True" Content="Send Message" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
+                    <ListBoxItem Content="Send Message" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     <ListBoxItem Content="Recieve Message" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
-                    <ListBoxItem Content="Add User" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
-                    <ListBoxItem Content="ChatBox (progress)" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
+                    <ListBoxItem IsSelected="True" Content="Add User" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
+                    <ListBoxItem Content="Chatbox(progress)" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     <ListBoxItem Content="Settings" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     <ListBoxItem Content="Logout" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                 </ListBox>
             </Viewbox>
 
             <StackPanel DockPanel.Dock="Right" Background="WhiteSmoke">
-                <TextBlock Text="Send message" FontSize="40" Foreground="White" Padding="10,5,0,5">
+                <TextBlock Text="Add user" FontSize="40" Foreground="White" Padding="10,5,0,5">
                     <TextBlock.Background>
                         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="2.5,0">
                             <GradientStop Color="Black"/>
@@ -51,24 +53,24 @@
                         </LinearGradientBrush>
                     </TextBlock.Background>
                 </TextBlock>
-                <TextBlock Text="Send a message to someone" Margin="10,25,0,0" FontSize="26" FontWeight="DemiBold"/>
+                <TextBlock Text="Add a user" Margin="10,25,0,0" FontSize="26" FontWeight="DemiBold"/>
                 <Border BorderThickness="2" CornerRadius="2" BorderBrush="Black" Width="825" Height="86" Margin="10,25,0,0">
                     <StackPanel>
-                        
+
 
                         <DockPanel  Height="28">
-                            <TextBlock Text="Choose reciever" Foreground="black" FontSize="14" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                            <ComboBox x:Name="recieverBox" Foreground="black"   Height="30" ItemsSource="{Binding}" />
+                            <TextBlock Text="Username: " Foreground="black" FontSize="14" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                            <TextBox x:Name="userText" Foreground="black" FontSize="14" VerticalAlignment="Center" Margin="10,0,0,0" />
 
                         </DockPanel>
                         <DockPanel  Height="28">
-                            <TextBlock Text="Message" Foreground="black" FontSize="14" VerticalAlignment="Center" Margin="10,0,0,0" />
-                            <TextBox x:Name="messageText" Foreground="black" FontSize="14" VerticalAlignment="Center" Margin="10,0,0,0" />
+                            <TextBlock Text="Password: " Foreground="black" FontSize="14" VerticalAlignment="Center" Margin="10,0,0,0" />
+                            <PasswordBox x:Name="passwordText" Foreground="black" FontSize="14" VerticalAlignment="Center" Margin="10,0,0,0" />
                         </DockPanel>
 
                     </StackPanel>
                 </Border>
-                <Button x:Name="Sendbutton" Content="Send message" Background="White" BorderBrush="Black" BorderThickness="1" Margin="10,15,0,0" HorizontalAlignment="Left" Click="SendButton_Click"/>
+                <Button x:Name="addButton" Content="Add User" Background="White" BorderBrush="Black" BorderThickness="1" Margin="10,15,0,0" HorizontalAlignment="Left" Click="addButton_Click"/>
             </StackPanel>
         </DockPanel>
     </Grid>
