--- a/frontend/frontend/ChatboxPage.xaml
+++ b/frontend/frontend/ChatboxPage.xaml
@@ -30,18 +30,60 @@
                     </Trigger>
                 </Style.Triggers>
             </Style>
-            <Style TargetType="{x:Type Button}">
+            <Style x:Key="RoundCorner" TargetType="{x:Type Button}">
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="Padding" Value="1"/>
                 <Setter Property="Template">
                     <Setter.Value>
-                        <ControlTemplate TargetType="Button">
-                            <Grid Background="{TemplateBinding Background}">
-                                <VisualStateManager.VisualStateGroups>
-                                    <VisualStateGroup x:Name="CommonStates">
-                                        <VisualState x:Name="Normal"/>
-                                        <VisualState x:Name="MouseOver"/>
-                                    </VisualStateGroup>
-                                </VisualStateManager.VisualStateGroups>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Grid x:Name="grid">
+                                <Border x:Name="border" CornerRadius="8" BorderBrush="Black" BorderThickness="2">
+                                    <Border.Background>
+                                        <RadialGradientBrush GradientOrigin="0.496,1.052">
+                                            <RadialGradientBrush.RelativeTransform>
+                                                <TransformGroup>
+                                                    <ScaleTransform CenterX="0.5" CenterY="0.5" 
+                                                        ScaleX="1.5" ScaleY="1.5"/>
+                                                    <TranslateTransform X="0.02" Y="0.3"/>
+                                                </TransformGroup>
+                                            </RadialGradientBrush.RelativeTransform>
+                                            <GradientStop Offset="1" Color="#00000000"/>
+                                            <GradientStop Offset="0.3" Color="#FFFFFFFF"/>
+                                        </RadialGradientBrush>
+                                    </Border.Background>
+                                    <ContentPresenter HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"
+                                          TextElement.FontWeight="Bold">
+                                    </ContentPresenter>
+                                </Border>
+
                             </Grid>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsPressed" Value="True">
+                                    <Setter Property="Background" TargetName="border">
+                                        <Setter.Value>
+                                            <RadialGradientBrush GradientOrigin="0.496,1.052">
+                                                <RadialGradientBrush.RelativeTransform>
+                                                    <TransformGroup>
+                                                        <ScaleTransform CenterX="0.5" CenterY="0.5" ScaleX="1.5" ScaleY="1.5"/>
+                                                        <TranslateTransform X="0.02" Y="0.3"/>
+                                                    </TransformGroup>
+                                                </RadialGradientBrush.RelativeTransform>
+                                                <GradientStop Color="#00000000" Offset="1"/>
+                                                <GradientStop Color="#FF303030" Offset="0.3"/>
+                                            </RadialGradientBrush>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="BorderBrush" TargetName="border" Value="#FF33962B"/>
+                                </Trigger>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter Property="Opacity" TargetName="grid" Value="0.25"/>
+                                </Trigger>
+
+                            </ControlTemplate.Triggers>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
@@ -70,17 +112,29 @@
                         </LinearGradientBrush>
                     </TextBlock.Background>
                 </TextBlock>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                </StackPanel>
-                <StackPanel Margin="10,30,10,0">
-                    <Border BorderBrush="Blue" BorderThickness="2" CornerRadius="10" Background="White">
-                        <StackPanel>
-                            <TextBlock FontSize="30" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10" Padding="5,0,5,0">
-                                <TextBlock x:Name="welcomeBlock" Text="In Progress"></TextBlock>
-                            </TextBlock>
-                        </StackPanel>
+                <StackPanel Margin="10,10,10,0">
+                    <Label Width="140" Content="Incoming Chat Messages" HorizontalAlignment="Left" Margin="10,0,0,10" FontFamily="Agency FB" FontSize="15" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" d:LayoutOverrides="VerticalAlignment">
+                    </Label>
+                    <Border Margin="10,0,10,17" VerticalAlignment="Bottom" Height="115" Background="#FFFFC936" CornerRadius="5,5,5,5" d:LayoutOverrides="VerticalAlignment">
+                        <TextBox Margin="5,5,5,5" x:Name="txtMessages" Width="Auto" Height="Auto" BorderBrush="{x:Null}" FontFamily="Agency FB" FontSize="15" Text="" TextWrapping="Wrap" IsEnabled="True" Cursor="IBeam"  ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" IsReadOnly="True" />
+                        
                     </Border>
+                    <StackPanel Height="120">
+                        <Label Width="140" Content="Send a message" HorizontalAlignment="Left" Margin="10,0,0,10" FontFamily="Agency FB" FontSize="15" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" d:LayoutOverrides="VerticalAlignment">
+                        </Label>
+                        <Border Margin="10,0,10,5" VerticalAlignment="Bottom" Height="80" Background="#FFFFC936" CornerRadius="5,5,5,5" d:LayoutOverrides="VerticalAlignment">
+                            <TextBox Margin="5,5,5,5" x:Name="sendMessages" Width="Auto" Height="Auto" BorderBrush="{x:Null}" FontFamily="Agency FB" FontSize="15" Text="" TextWrapping="Wrap" IsEnabled="True" Cursor="IBeam"  ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" />
+                        </Border>
+                        
+                    </StackPanel>
+                    <StackPanel Height="20">
+
+                        <Button x:Name="Sendbutton" Style="{DynamicResource RoundCorner}" Content="Send message" BorderBrush="Black" BorderThickness="1" Margin="12,0,0,0" HorizontalAlignment="Left" Click="SendButton_Click"/>
+
+                    </StackPanel>
+                    
                 </StackPanel>
+                
             </StackPanel>
         </DockPanel>
     </Grid>
