--- a/frontend/frontend/ChatboxPage.xaml
+++ b/frontend/frontend/ChatboxPage.xaml
@@ -95,7 +95,7 @@
                     <ListBoxItem  Content="Home" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     <ListBoxItem Content="Send Message" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     <ListBoxItem Content="Recieve Message" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
-                    <ListBoxItem Content="Add User" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
+                    
                     <ListBoxItem IsSelected="True" Content="ChatBox (progress)" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     <ListBoxItem Content="Settings" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     <ListBoxItem Content="Logout" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
@@ -103,7 +103,7 @@
             </Viewbox>
 
 
-            <StackPanel DockPanel.Dock="Right" Background="WhiteSmoke">
+            <StackPanel DockPanel.Dock="Right" Background="WhiteSmoke" Width="Auto">
                 <TextBlock Text="Chatbox(In Progress)" FontSize="40" Padding="10,5,0,5" Foreground="White">
                     <TextBlock.Background>
                         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="2.5,0">
@@ -112,31 +112,37 @@
                         </LinearGradientBrush>
                     </TextBlock.Background>
                 </TextBlock>
-                <StackPanel Margin="10,10,10,0">
-                    <DockPanel>
-                    <Label Width="140" Content="Incoming Chat Messages" HorizontalAlignment="Left" Margin="10,0,0,10" FontFamily="Agency FB" FontSize="15" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" d:LayoutOverrides="VerticalAlignment">
-                    </Label>
-                        <ComboBox x:Name="senderBox" HorizontalAlignment="Right" Width="50" Text="Choose reciever" SelectionChanged="ComboBox_SelectionChanged" VerticalAlignment="Top" ItemsSource="{Binding}"/>
+                <DockPanel Margin="10,10,10,0">
+                    <StackPanel DockPanel.Dock="Left" Height="Auto" Width="100">
+                        <Viewbox Stretch="Uniform" HorizontalAlignment="Left">
+                            <ListView x:Name="chatterList" ItemsSource="{Binding}" ScrollViewer.CanContentScroll="True"></ListView>
+                        </Viewbox>
+
+                    </StackPanel>
+                    <StackPanel DockPanel.Dock="Right" Width="Auto">
+                        <DockPanel>
+                            <Label Width="140" Content="Incoming Chat Messages" HorizontalAlignment="Right" Margin="10,0,0,10" FontFamily="Agency FB" FontSize="15" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" d:LayoutOverrides="VerticalAlignment">
+                        </Label>
                     </DockPanel>
-                    <Border Margin="10,0,10,17" VerticalAlignment="Bottom" Height="115" Background="#FFFFC936" CornerRadius="5,5,5,5" d:LayoutOverrides="VerticalAlignment">
+                    <Border Margin="10,0,10,17" VerticalAlignment="Bottom" Height="115" Background="#FFFFC936" CornerRadius="5,5,5,5" d:LayoutOverrides="VerticalAlignment" Width="400" HorizontalAlignment="right">
                         <TextBox Margin="5,5,5,5" x:Name="txtMessages" Width="Auto" Height="Auto" BorderBrush="{x:Null}" FontFamily="Agency FB" FontSize="15" Text="" TextWrapping="Wrap" IsEnabled="True" Cursor="IBeam"  ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" IsReadOnly="True" />
-                        
+
                     </Border>
                     <StackPanel Height="120">
-                        <Label Width="140" Content="Send a message" HorizontalAlignment="Left" Margin="10,0,0,10" FontFamily="Agency FB" FontSize="15" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" d:LayoutOverrides="VerticalAlignment">
+                        <Label Width="100" Content="Send a message" HorizontalAlignment="Right" Margin="10,0,0,10" FontFamily="Agency FB" FontSize="15" FontWeight="Bold" RenderTransformOrigin="0.5,0.5" d:LayoutOverrides="VerticalAlignment">
                         </Label>
-                        <Border Margin="10,0,10,5" VerticalAlignment="Bottom" Height="80" Background="#FFFFC936" CornerRadius="5,5,5,5" d:LayoutOverrides="VerticalAlignment">
+                        <Border Margin="10,0,10,5" VerticalAlignment="Bottom" Height="80" Background="#FFFFC936" CornerRadius="5,5,5,5" d:LayoutOverrides="VerticalAlignment" Width="400" HorizontalAlignment="Right">
                             <TextBox Margin="5,5,5,5" x:Name="sendMessages" Width="Auto" Height="Auto" BorderBrush="{x:Null}" FontFamily="Agency FB" FontSize="15" Text="" TextWrapping="Wrap" IsEnabled="True" Cursor="IBeam"  ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" />
                         </Border>
-                        
+
                     </StackPanel>
                     <StackPanel Height="20">
 
-                        <Button x:Name="Sendbutton" Style="{DynamicResource RoundCorner}" Content="Send message" BorderBrush="Black" BorderThickness="1" Margin="12,0,0,0" HorizontalAlignment="Left" Click="Sendbutton_Click"/>
+                        <Button x:Name="Sendbutton" Style="{DynamicResource RoundCorner}" Content="Send message" BorderBrush="Black" BorderThickness="1" Margin="12,0,0,0" HorizontalAlignment="Right" Click="Sendbutton_ClickAsync"/>
 
                     </StackPanel>
-                    
                 </StackPanel>
+            </DockPanel>
                 
             </StackPanel>
         </DockPanel>
