--- a/frontend/frontend/RecievedPage.xaml
+++ b/frontend/frontend/RecievedPage.xaml
@@ -40,6 +40,8 @@
                     <ListBoxItem IsSelected="True" Content="Recieve Message" Foreground="White"  FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     
                     <ListBoxItem Content="Chatbox(progress)" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
+                    <ListBoxItem Content="Steganography" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
+
                     <ListBoxItem Content="Settings" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                     <ListBoxItem Content="Logout" Foreground="White" FontSize="20" FontWeight="Medium" Padding="10,0" Height="87"/>
                 </ListBox>
